app/assets/v2/css/base.css
/* ... */
.profile_details li:nth-child(2n+0) .dot {
    background: #919191;
}

.profile_details li:nth-child(2n+1) .dot {
    background: black;
}

.profile_details #stats {
    padding-top: 5px;
    padding-left: 2px;
    padding-right: 2px;
    width: 100%;
}

.profile_details #stats li {
    list-style: none;
    display: inline-block;
    background-color: #efefef;
    width: 24%;
    padding: 5px 10px;
    margin-left: 2px;
    text-align: center;
    font-size: 32px;
    font-weight: bold;
    border-radius: 3px;
    margin-top: 10px;
}

.profile_details #stats li span {
    font-size: 14px;
    display: block;
    font-weight: normal;
    color: #8a8a8a;
}

.profile_details #hero {
    width: 100%;
    height: 370px;
    background-color: #0d053a;
    background: -webkit-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: -o-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: -moz-radial-gradient(#3e265a 20%, #1e063a, #1e063a);
    background: radial-gradient(#3e265a 20%, #1e063a , #1e063a);
    color: white;
    text-align: center;
}

.profile_details #hero li {
    list-style: none;
    display: inline-block;
}

.profile_details #hero img.avatar {
    max-height: 125px;
    max-width: 125px;
    border-radius: 60px;
    border: 3px white solid;
}

.profile_details #hero ul {
    margin-left: 0px;
    padding-left: 0px;
}

.profile_details #hero .authors img {
    max-height: 45px;
    max-width: 45px;
    border-radius: 30px;
    border: 3px white solid;
    margin-right: -20px;
}

.profile_details #hero .ctas img {
    width: 25px;
    height: 25px;
    filter: invert(100%);
    margin: 10px;
}

.profile_details #hero .ctas img:hover {
    filter: invert(90%);
}

.profile_details #hero p {
    color: #919191;
}

.profile_details .tips li ,
.profile_details .bounties li {
    list-style: none;
    padding-top: 10px;
    height: 80px;
}

.profile_details .tips li:hover,
.profile_details .bounties li:hover {
    background-color: #fafafa;
    cursor: pointer;
}

.profile_details .tips li a,
.profile_details .bounties li a {
    color: black;
}

.profile_details .tips li a.btn,
.profile_details .bounties li a.btn {
    color: white;
}

.profile_details .tips li div.url,
.profile_details .tips li div.from_username,
.profile_details .bounties li div.status,
.profile_details .bounties li div.relationship {
    height: 80px;
    width: 100px;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

.profile_details .tips div.url,
.profile_details .tips li div.url{
    width: 400px;
}

.profile_details .tips li div.details,
.profile_details .bounties li div.details {
    height: 80px;
    width: 500px;
    display: inline-block;
    vertical-align: top;
}
.profile_details .tips li div.details{
    width: 200px;
}

.profile_details .tips li div.details p,
.profile_details .bounties li div.details p {
    color: #919191;
}

.profile_details .tips li .amount, 
.profile_details .bounties li .amount {
    height: 80px;
    width: 200px;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

.profile_details h6 {
    font-weight: bold;
}

.profile_details .repos li {
    list-style: none;
    padding-left: 105px;
    min-height: 60px;
}

.profile_details .repos li a {
    color: black;
    text-decoration: none;
}

.profile_details .repos li:hover {
    background-color: #fafafa;
    cursor: pointer;
}

.profile_details .repos li p {
    color: #919191;
}

.profile_details .repos li p.meta {
    float: right;
    padding-right: 10px;
}

.profile_details .dot,
.profile_details li:nth-child(2n+0) .dot {
    background: #919191;
}

.profile_details li:nth-child(2n+1) .dot {
    background: black;
}

#pull_gh {
    font-size: 12px
}

.dashboard .w-75 .github-comment {
    background: url(/static/v2/images/icon-msg-16.png) no-repeat left;
    padding-left: 18px;
    margin-right: 10px;
    display: inline-block;
}

/* Mission Page */
.mission {
    font-family: Futura;
}

.text-highlight-green {
    color: #12c971;
}

.text-highlight-dark-blue {
    color: #220e90;
}

.text-highlight-pink {
    color: #da086b;
}

#mission_hero .text {
    margin-left: 2rem;
}

#mission_hero .font-bigger-4 {
    letter-spacing: 0.15rem;
}

#we_want,
#we_value,
#we_interact {
    padding: 0 10vw;
}

.mission-divider {
    width: 90vw;
    border-color: black;
}

#interest_list{
    margin-left: 0px;
    padding-left: 0px;
}
#interest_list li{
    list-style: none;
}

body.slack .justify-content-right img {
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

@media (max-width: 1350px) {
    .profile_details .tips li div.details,
    .profile_details .bounties li div.details{
        width: 400px;
    }
}
@media (max-width: 1250px) {
    .profile_details .tips li div.details,
    .profile_details .bounties li div.details{
        width: 400px;
    }
}
/* ... */

